// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotonColor overview 1`] = `
<DocumentFragment>
  <table
    class="css-1ea51ic-TableRowContainer"
  >
    <tbody>
      <tr>
        <td>
          <div
            class="css-1lfuaij-BasePhotonColor"
            style="display: inline-block;"
          >
            <div
              class="css-1s3hn2c-BasePhotonColor"
            />
            <div>
              Orange 50
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-r8gx0k-BasePhotonColor"
            >
              #ff9400
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-1iqk8zm-BasePhotonColor"
            >
              AAA
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-1v4x0l8-BasePhotonColor"
            >
              F
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PhotonColor palette 1`] = `
<DocumentFragment>
  <table
    class="css-6vv4r4-PhotonColorPalette"
  >
    <colgroup>
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
    </colgroup>
    <tbody>
      <tr>
        <td>
          <div
            class="css-1lfuaij-BasePhotonColor"
            style="display: inline-block;"
          >
            <div
              class="css-1b4kcbm-BasePhotonColor"
            />
            <div>
              Teal 50
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-r8gx0k-BasePhotonColor"
            >
              #00feff
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-x10bjo-BasePhotonColor"
            >
              AAA
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-o5254v-BasePhotonColor"
            >
              F
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-1lfuaij-BasePhotonColor"
            style="display: inline-block;"
          >
            <div
              class="css-1o5fmes-BasePhotonColor"
            />
            <div>
              Teal 60
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-r8gx0k-BasePhotonColor"
            >
              #00c8d7
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-1deu0sp-BasePhotonColor"
            >
              AAA
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-n757r8-BasePhotonColor"
            >
              F
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-1lfuaij-BasePhotonColor"
            style="display: inline-block;"
          >
            <div
              class="css-1uzb3dx-BasePhotonColor"
            />
            <div>
              Teal 70
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-r8gx0k-BasePhotonColor"
            >
              #008ea4
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-7ws648-BasePhotonColor"
            >
              AA
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-5139mt-BasePhotonColor"
            >
              AA+
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-1lfuaij-BasePhotonColor"
            style="display: inline-block;"
          >
            <div
              class="css-6d6dg7-BasePhotonColor"
            />
            <div>
              Teal 80
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-r8gx0k-BasePhotonColor"
            >
              #005a71
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-4axwem-BasePhotonColor"
            >
              F
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-1ajm00r-BasePhotonColor"
            >
              AAA
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-1lfuaij-BasePhotonColor"
            style="display: inline-block;"
          >
            <div
              class="css-yi4k5m-BasePhotonColor"
            />
            <div>
              Teal 90
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-r8gx0k-BasePhotonColor"
            >
              #002d3e
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-16u179j-BasePhotonColor"
            >
              F
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-1oorhqh-BasePhotonColor"
          >
            <div
              class="css-1gxoomu-BasePhotonColor"
            >
              AAA
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
